# block-memory-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/block_memory/: __init__.py  __main__.py  server.py
